test/parsing/precedence/memmanage-vs-cast.good
memmanage-vs-cast.chpl:8: warning: borrowed C
memmanage-vs-cast.chpl:9: warning: borrowed C
memmanage-vs-cast.chpl:10: warning: owned C
memmanage-vs-cast.chpl:12: error: done
